@@ -1,1 +1,2 @@
 initialized = True
+print("Hello world!")
